--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -425,6 +425,164 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### S2: Frequency-matched out-of-vocab swap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10136/10136 [00:07<00:00, 1285.94it/s]\n",
+      "100%|██████████| 2389/2389 [00:00<00:00, 6180.66it/s] \n",
+      "100%|██████████| 4430/4430 [00:01<00:00, 3437.49it/s] \n",
+      "100%|██████████| 743/743 [00:00<00:00, 14791.18it/s]\n",
+      "100%|██████████| 111/111 [00:00<00:00, 28093.64it/s]\n",
+      "100%|██████████| 16/16 [00:00<00:00, 29013.78it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 5405.03it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_vocab_match_frequency_oov(token_by_length, token_frequency_map, wiki_token_frequency_discount):\n",
+    "    vocab_match = {}\n",
+    "    for _, tokens in token_by_length.items():\n",
+    "        tokens_copy = copy.deepcopy(tokens)\n",
+    "        \n",
+    "        # token_frequency_map, token_lemma_map)\n",
+    "        \n",
+    "        token_freq_tu = []\n",
+    "        for t in tokens:\n",
+    "            token_freq_tu.append((t, token_frequency_map[t]))\n",
+    "        token_freq_tu = sorted(token_freq_tu, key=operator.itemgetter(1), reverse=True)\n",
+    "        \n",
+    "        matched_to = set([])\n",
+    "        for i in trange(0, len(token_freq_tu)):\n",
+    "            found = False\n",
+    "            for j in range(0, len(wiki_token_frequency_discount)):\n",
+    "                word_i = token_freq_tu[i][0]\n",
+    "                word_j = wiki_token_frequency_discount[j][0]\n",
+    "                if i != j and word_j not in matched_to and \\\n",
+    "                    levenshteinDistance(word_i, word_j) > 0.3:\n",
+    "                    matched_to.add(word_j)\n",
+    "                    vocab_match[word_i] = word_j\n",
+    "                    found = True\n",
+    "                    break\n",
+    "            if not found:\n",
+    "                vocab_match[word_i] = word_i\n",
+    "            \n",
+    "    return vocab_match\n",
+    "\n",
+    "discount = int(len(wiki_token_frequency_map)/len(task_token_frequency_map))\n",
+    "wiki_token_frequency_discount = []\n",
+    "wiki_token_frequency_discount_map = {}\n",
+    "for k, v in wiki_token_frequency_map.items():\n",
+    "    if k in task_token_frequency_map.keys():\n",
+    "        continue\n",
+    "    discounted = int(v/discount)\n",
+    "    if discounted > 0:\n",
+    "        wiki_token_frequency_discount.append((k, discounted))\n",
+    "        wiki_token_frequency_discount_map[k] = discounted\n",
+    "vocab_match_frequency_oov = \\\n",
+    "    generate_vocab_match_frequency_oov(task_token_by_length, \n",
+    "                                       task_token_frequency_map,\n",
+    "                                       wiki_token_frequency_discount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb5525df92e64369855254a9fc4ba2a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=159274.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9207ed1fa40c4e46a1b999ed7c6556d2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=1100.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96c941199de64dd9b9b8503d50422a93",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=2210.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "corrupted_train_dataset = train_df.map(partial(random_corrupt, \n",
+    "                                               modified_basic_tokenizer, \n",
+    "                                               vocab_match_frequency_oov))\n",
+    "corrupted_validation_dataset = eval_df.map(partial(random_corrupt, \n",
+    "                                                   modified_basic_tokenizer, \n",
+    "                                                   vocab_match_frequency_oov))\n",
+    "corrupted_test_dataset = test_df.map(partial(random_corrupt, \n",
+    "                                             modified_basic_tokenizer, \n",
+    "                                             vocab_match_frequency_oov))\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset, \n",
+    "                                  \"test\":corrupted_test_dataset})\n",
+    "corrupted_datasets.save_to_disk(f\"../data-files/{FILENAME_CONFIG[task_name]}-corrupted-S2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### S3: Low-band Frequency-matched out-of-vocab swap\n",
     "all token maps to very lower frequency token in English texts"
    ]
@@ -655,6 +813,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### S5: High-band frequency vocab swap\n",
+    "TODO: currently, don't have a good way of doing this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### S6: High-band frequency vocab swap\n",
+    "TODO: currently, don't have a good way of doing this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### S7: Dangerous Zone, let me swap everything randomly\n",
     "random everything!"
    ]
@@ -754,28 +928,6 @@
     "                                  \"validation\":corrupted_validation_dataset, \n",
     "                                  \"test\":corrupted_test_dataset})\n",
     "corrupted_datasets.save_to_disk(f\"../data-files/{FILENAME_CONFIG[task_name]}-corrupted-S7\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 210,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'label': 1,\n",
-       " 'source': 'sst',\n",
-       " 'text': 'talwar tynset goaltending reconnect beets putsch slowmo 89141'}"
-      ]
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "corrupted_test_dataset[1]"
    ]
   },
   {
