high order freq analyses

--- a/code/run_bow_classifier.ipynb
+++ b/code/run_bow_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +144,12 @@
     "    \"mrpc\": (\"sentence1\", \"sentence2\"),\n",
     "    \"qnli\": (\"question\", \"sentence\")\n",
     "}\n",
-    "original_vocab = load_bert_vocab(\"../data-files/bert_vocab.txt\")\n",
-    "original_tokenizer = transformers.BertTokenizer(\n",
-    "    vocab_file=\"../data-files/bert_vocab.txt\")\n",
+    "# WARNING: you dont need BERT tokenizer\n",
+    "# original_vocab = load_bert_vocab(\"../data-files/bert_vocab.txt\")\n",
+    "# original_tokenizer = transformers.BertTokenizer(\n",
+    "#     vocab_file=\"../data-files/bert_vocab.txt\")\n",
+    "# Just use some basic white space tokenizor here!\n",
+    "modified_basic_tokenizer = ModifiedBasicTokenizer()\n",
     "max_length = 128\n",
     "per_device_train_batch_size = 128\n",
     "per_device_eval_batch_size = 128\n",
@@ -156,7 +159,7 @@
     "seed = 42\n",
     "lr = 1e-3\n",
     "num_train_epochs = 1000\n",
-    "task_name = \"qnli\"\n",
+    "task_name = \"sst3\"\n",
     "sentence1_key, sentence2_key = TASK_CONFIG[task_name]\n",
     "\n",
     "random.seed(seed)\n",
