--- a/code/high_order_frequency_analyses.ipynb
+++ b/code/high_order_frequency_analyses.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +70,19 @@
     "    set_seed,\n",
     "    EarlyStoppingCallback\n",
     ")\n",
-    "from transformers.trainer_utils import is_main_process, EvaluationStrategy"
+    "from transformers.trainer_utils import is_main_process, EvaluationStrategy\n",
+    "from tabulate import tabulate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
     "# task setups\n",
     "task_name = \"sst3\"\n",
+    "num_labels = 3\n",
     "FILENAME_CONFIG = {\n",
     "    \"sst3\" : \"sst-tenary\"\n",
     "}"
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,12 +206,13 @@
     "    label_token_freq_bucket_map[k] = freq_counts\n",
     "    \n",
     "# have to take samples in order to remove the bias\n",
-    "min_len = min(len(label_token_freq_bucket_map[0]), \n",
-    "              len(label_token_freq_bucket_map[1]), \n",
-    "              len(label_token_freq_bucket_map[2]))\n",
-    "bucket_1 = random.sample(label_token_freq_bucket_map[0], k=min_len)\n",
-    "bucket_2 = random.sample(label_token_freq_bucket_map[1], k=min_len)\n",
-    "bucket_3 = random.sample(label_token_freq_bucket_map[2], k=min_len)"
+    "min_len = 99999999\n",
+    "for k, v in label_token_freq_bucket_map.items():\n",
+    "    if len(v) < min_len:\n",
+    "        min_len = len(v)\n",
+    "sampled_label_buckets = {}\n",
+    "for k, v in label_token_freq_bucket_map.items():\n",
+    "    sampled_label_buckets[k] = random.sample(v, k=min_len)"
    ]
   },
   {
@@ -221,10 +224,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# PMI of frequency bucket for each label\n",
+    "\n",
+    "# p_label\n",
+    "p_label_sum = sum(list(collections.Counter(train_df[\"label\"]).values()))\n",
+    "p_label = [v/p_label_sum for v in list(collections.Counter(train_df[\"label\"]).values())]\n",
+    "label = list(collections.Counter(train_df[\"label\"]).keys())\n",
+    "p_label = dict(zip(label, p_label))\n",
+    "\n",
+    "# p_bucket\n",
+    "p_bucket = {}\n",
+    "p_bucket_sum = 0\n",
+    "for i in range(0, num_labels):\n",
+    "    for b in label_token_freq_bucket_map[i]:\n",
+    "        if b in p_bucket.keys():\n",
+    "            p_bucket[b] += 1\n",
+    "        else:\n",
+    "            p_bucket[b] = 1\n",
+    "        p_bucket_sum += 1\n",
+    "for k, v in p_bucket.items():\n",
+    "    p_bucket[k] = v/p_bucket_sum\n",
+    "    \n",
+    "# p_label_bucket\n",
+    "p_label_bucket = {}\n",
+    "for i in range(0, num_labels):\n",
+    "    p_label_bucket[i] = {}\n",
+    "    for b in label_token_freq_bucket_map[i]:\n",
+    "        if b in p_label_bucket[i].keys():\n",
+    "            p_label_bucket[i][b] += 1\n",
+    "        else:\n",
+    "            p_label_bucket[i][b] = 1\n",
+    "    for k, v in p_label_bucket[i].items():\n",
+    "        p_label_bucket[i][k] = (v/p_bucket_sum)/(p_bucket[k]*p_label[i])\n",
+    "        \n",
+    "sorted_p_label_buckets = []\n",
+    "for i in range(0, num_labels):\n",
+    "    sorted_p_label_bucket = sorted(p_label_bucket[i].items(), key=operator.itemgetter(1),reverse=True)\n",
+    "    sorted_p_label_buckets.append(sorted_p_label_bucket)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing #10000 example...\n",
+      "processing #20000 example...\n",
+      "processing #30000 example...\n",
+      "processing #40000 example...\n",
+      "processing #50000 example...\n",
+      "processing #60000 example...\n",
+      "processing #70000 example...\n",
+      "processing #80000 example...\n",
+      "processing #90000 example...\n",
+      "processing #100000 example...\n",
+      "processing #110000 example...\n",
+      "processing #120000 example...\n",
+      "processing #130000 example...\n",
+      "processing #140000 example...\n",
+      "processing #150000 example...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get how many examples containing different buckets\n",
+    "label_bucket_example_count_map = {}\n",
+    "for i, example in enumerate(train_df):\n",
+    "    if i % 10000 == 0 and i != 0:\n",
+    "        print(f\"processing #{i} example...\")\n",
+    "    original_sentence = example['text']\n",
+    "    label = example['label']\n",
+    "    if len(original_sentence.strip()) != 0:\n",
+    "        tokens = modified_basic_tokenizer.tokenize(original_sentence)\n",
+    "        if label not in label_bucket_example_count_map.keys():\n",
+    "            label_bucket_example_count_map[label] = {}\n",
+    "        buckets = set([])\n",
+    "        for t in tokens:\n",
+    "            bucket = freq_bucket_map[task_token_frequency_map[t]]\n",
+    "            buckets.add(bucket)\n",
+    "        for b in buckets:\n",
+    "            if b not in label_bucket_example_count_map[label].keys():\n",
+    "                label_bucket_example_count_map[label][b] = 1\n",
+    "            else:\n",
+    "                label_bucket_example_count_map[label][b] += 1\n",
+    "\n",
+    "for k, v in label_bucket_example_count_map.items():\n",
+    "    count_example = collections.Counter(train_df[\"label\"])[k]\n",
+    "    for bucket, count in label_bucket_example_count_map[k].items():\n",
+    "        label_bucket_example_count_map[k][bucket] = count/count_example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label_0_pmi      label_0_prob  label_1_pmi      label_1_prob  label_2_pmi      label_2_prob\n",
+      "-------------  --------------  -------------  --------------  -------------  --------------\n",
+      "bucket[#20]            0.2779  bucket[#21]            0.2852  bucket[#1]             0.0011\n",
+      "bucket[#19]            0.3646  bucket[#13]            0.347   bucket[#2]             0.0106\n",
+      "bucket[#22]            0.33    bucket[#12]            0.3436  bucket[#3]             0.014\n",
+      "bucket[#18]            0.2748  bucket[#14]            0.3096  bucket[#4]             0.0847\n",
+      "bucket[#16]            0.3376  bucket[#22]            0.2894  bucket[#5]             0.1182\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get the stats table for different labels\n",
+    "# print(tabulate([['Alice', 24], ['Bob', 19]], headers=['label', 'Age']))\n",
+    "headers = []\n",
+    "for i in range(0, num_labels):\n",
+    "    headers += [f\"label_{i}_pmi\", f\"label_{i}_prob\"]\n",
+    "top_k = 5\n",
+    "lines = []\n",
+    "for i in range(top_k):\n",
+    "    line = []\n",
+    "    for j in range(0, num_labels):\n",
+    "        pmi_bucket = sorted_p_label_buckets[j][i][0]\n",
+    "        prob = label_bucket_example_count_map[j][pmi_bucket]\n",
+    "        line.append(f\"bucket[#{pmi_bucket}]\")\n",
+    "        line.append(round(prob, 4))\n",
+    "    lines.append(line)\n",
+    "print(tabulate(lines, headers=headers))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,9 +388,9 @@
    "source": [
     "fig = plt.figure(figsize=(8,6))\n",
     "ax = fig.add_subplot(111)\n",
-    "g = ax.hist(bucket_1, bins=len(freq_bucket), facecolor='r', alpha = 0.5)\n",
-    "g = ax.hist(bucket_2, bins=len(freq_bucket), facecolor='g', alpha = 0.5)\n",
-    "g = ax.hist(bucket_3, bins=len(freq_bucket), facecolor='y', alpha = 0.5)\n",
+    "g = ax.hist(label_1_bucket, bins=len(freq_bucket), facecolor='r', alpha = 0.5)\n",
+    "g = ax.hist(label_2_bucket, bins=len(freq_bucket), facecolor='g', alpha = 0.5)\n",
+    "g = ax.hist(label_3_bucket, bins=len(freq_bucket), facecolor='y', alpha = 0.5)\n",
     "# plt.grid(True)\n",
     "# plt.grid(color='black', linestyle='-.')\n",
     "import matplotlib.ticker as mtick\n",
@@ -313,8 +447,10 @@
     "    label = example['label']\n",
     "    if len(original_sentence.strip()) != 0:\n",
     "        tokens = modified_basic_tokenizer.tokenize(original_sentence)\n",
-    "        for t1 in tokens:\n",
-    "            for t2 in tokens:\n",
+    "        for i in range(len(tokens)-1):\n",
+    "            for j in range(i+1, len(tokens)):\n",
+    "                t1 = tokens[i]\n",
+    "                t2 = tokens[j]\n",
     "                freq_tuple = tuple([freq_bucket_map[token_frequency_map[t1]], freq_bucket_map[token_frequency_map[t2]]])\n",
     "                label_freq_freq_map[label].append(freq_tuple)\n",
     "                \n",
