--- a/code/run_bow_classifier.ipynb
+++ b/code/run_bow_classifier.ipynb
@@ -2475,6 +2475,306 @@
       "Macro-F1:  0.6659599232764122\n",
       "MCC:  0.5018146685066798\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:04:23 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.64960   0.74550   0.69425      3387\n",
+      "           1    0.67826   0.63145   0.65402      3275\n",
+      "           2    0.67396   0.61863   0.64511      3338\n",
+      "\n",
+      "    accuracy                        0.66580     10000\n",
+      "   macro avg    0.66727   0.66519   0.66446     10000\n",
+      "weighted avg    0.66711   0.66580   0.66467     10000\n",
+      "\n",
+      "Macro-F1:  0.6644602845890559\n",
+      "MCC:  0.49977486536719906\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:04:32 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.65491   0.73457   0.69246      3387\n",
+      "           1    0.68270   0.63267   0.65674      3275\n",
+      "           2    0.66740   0.63301   0.64975      3338\n",
+      "\n",
+      "    accuracy                        0.66730     10000\n",
+      "   macro avg    0.66834   0.66675   0.66632     10000\n",
+      "weighted avg    0.66818   0.66730   0.66650     10000\n",
+      "\n",
+      "Macro-F1:  0.666315631542855\n",
+      "MCC:  0.5016070021222025\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:04:43 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.65426   0.73694   0.69314      3387\n",
+      "           1    0.68472   0.62534   0.65369      3275\n",
+      "           2    0.66468   0.63601   0.65003      3338\n",
+      "\n",
+      "    accuracy                        0.66670     10000\n",
+      "   macro avg    0.66789   0.66610   0.66562     10000\n",
+      "weighted avg    0.66772   0.66670   0.66583     10000\n",
+      "\n",
+      "Macro-F1:  0.6656193250392174\n",
+      "MCC:  0.500782449137531\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:04:52 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.66009   0.72129   0.68933      3387\n",
+      "           1    0.68258   0.63298   0.65684      3275\n",
+      "           2    0.65849   0.64350   0.65091      3338\n",
+      "\n",
+      "    accuracy                        0.66640     10000\n",
+      "   macro avg    0.66706   0.66592   0.66570     10000\n",
+      "weighted avg    0.66692   0.66640   0.66587     10000\n",
+      "\n",
+      "Macro-F1:  0.6656957610505834\n",
+      "MCC:  0.4999292433964599\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:05:03 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.64733   0.74136   0.69116      3387\n",
+      "           1    0.68294   0.62351   0.65188      3275\n",
+      "           2    0.66592   0.62463   0.64461      3338\n",
+      "\n",
+      "    accuracy                        0.66380     10000\n",
+      "   macro avg    0.66540   0.66317   0.66255     10000\n",
+      "weighted avg    0.66520   0.66380   0.66276     10000\n",
+      "\n",
+      "Macro-F1:  0.6625508647980013\n",
+      "MCC:  0.49670165168471864\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:05:13 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.64801   0.74520   0.69322      3387\n",
+      "           1    0.68380   0.62137   0.65110      3275\n",
+      "           2    0.66795   0.62612   0.64636      3338\n",
+      "\n",
+      "    accuracy                        0.66490     10000\n",
+      "   macro avg    0.66659   0.66423   0.66356     10000\n",
+      "weighted avg    0.66639   0.66490   0.66378     10000\n",
+      "\n",
+      "Macro-F1:  0.6635568030699218\n",
+      "MCC:  0.4984390171925355\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:05:23 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.65952   0.71774   0.68740      3387\n",
+      "           1    0.66908   0.64947   0.65913      3275\n",
+      "           2    0.66730   0.62672   0.64638      3338\n",
+      "\n",
+      "    accuracy                        0.66500     10000\n",
+      "   macro avg    0.66530   0.66464   0.66430     10000\n",
+      "weighted avg    0.66525   0.66500   0.66445     10000\n",
+      "\n",
+      "Macro-F1:  0.6643020606991402\n",
+      "MCC:  0.4978191100289787\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:05:33 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.64647   0.74668   0.69297      3387\n",
+      "           1    0.66909   0.64580   0.65724      3275\n",
+      "           2    0.68842   0.60365   0.64326      3338\n",
+      "\n",
+      "    accuracy                        0.66590     10000\n",
+      "   macro avg    0.66799   0.66538   0.66449     10000\n",
+      "weighted avg    0.66788   0.66590   0.66467     10000\n",
+      "\n",
+      "Macro-F1:  0.6644894490565659\n",
+      "MCC:  0.5002766766083931\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:05:43 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.65456   0.72394   0.68751      3387\n",
+      "           1    0.67627   0.63786   0.65651      3275\n",
+      "           2    0.66572   0.63122   0.64801      3338\n",
+      "\n",
+      "    accuracy                        0.66480     10000\n",
+      "   macro avg    0.66552   0.66434   0.66401     10000\n",
+      "weighted avg    0.66540   0.66480   0.66417     10000\n",
+      "\n",
+      "Macro-F1:  0.6640075720178864\n",
+      "MCC:  0.497654405354749\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:05:53 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.65401   0.73221   0.69090      3387\n",
+      "           1    0.67958   0.63206   0.65496      3275\n",
+      "           2    0.66762   0.63241   0.64954      3338\n",
+      "\n",
+      "    accuracy                        0.66610     10000\n",
+      "   macro avg    0.66707   0.66556   0.66513     10000\n",
+      "weighted avg    0.66693   0.66610   0.66532     10000\n",
+      "\n",
+      "Macro-F1:  0.6651340484835633\n",
+      "MCC:  0.49977443353581164\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:06:02 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.64972   0.74314   0.69329      3387\n",
+      "           1    0.68569   0.62748   0.65529      3275\n",
+      "           2    0.67050   0.62852   0.64883      3338\n",
+      "\n",
+      "    accuracy                        0.66700     10000\n",
+      "   macro avg    0.66863   0.66638   0.66581     10000\n",
+      "weighted avg    0.66843   0.66700   0.66601     10000\n",
+      "\n",
+      "Macro-F1:  0.6658062788699465\n",
+      "MCC:  0.5014932198119674\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "03/29/2021 12:06:12 - INFO - __main__ - ***** Evaluation Interval Hit *****\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0    0.65625   0.73782   0.69465      3387\n",
+      "           1    0.67113   0.64305   0.65679      3275\n",
+      "           2    0.67583   0.61833   0.64581      3338\n",
+      "\n",
+      "    accuracy                        0.66690     10000\n",
+      "   macro avg    0.66774   0.66640   0.66575     10000\n",
+      "weighted avg    0.66766   0.66690   0.66595     10000\n",
+      "\n",
+      "Macro-F1:  0.6657490714733104\n",
+      "MCC:  0.501125285384029\n"
+     ]
     }
    ],
    "source": [
