script to run layer head append

--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -64,7 +64,8 @@
     "from functools import partial\n",
     "\n",
     "from vocab_mismatch_utils import *\n",
-    "basic_tokenizer = ModifiedBasicTokenizer()"
+    "basic_tokenizer = ModifiedBasicTokenizer()\n",
+    "from models.modeling_bert import CustomerizedBertForSequenceClassification"
    ]
   },
   {
@@ -465,7 +466,10 @@
     "                        default=False,\n",
     "                        action='store_true',\n",
     "                        help=\"If you are also evaluating with scrambled texts.\")\n",
-    "\n",
+    "    parser.add_argument(\"--n_layer_to_finetune\",\n",
+    "                        default=-1,\n",
+    "                        type=int,\n",
+    "                        help=\"Indicate a number that is less than original layer if you only want to finetune with earlier layers only.\")\n",
     "    try:\n",
     "        get_ipython().run_line_magic('matplotlib', 'inline')\n",
     "        args = parser.parse_args([])\n",
@@ -495,6 +499,19 @@
     "        finetuning_task=args.task_name,\n",
     "        cache_dir=args.cache_dir\n",
     "    )\n",
+    "    if args.n_layer_to_finetune != -1:\n",
+    "        # then we are only finetuning n-th layer, not all the layers\n",
+    "        if args.n_layer_to_finetune > config.num_hidden_layers:\n",
+    "            logger.info(f\"***** WARNING: You are trying to train with first {args.n_layer_to_finetune} layers only *****\")\n",
+    "            logger.info(f\"***** WARNING: But the model has only {config.num_hidden_layers} layers *****\")\n",
+    "            logger.info(f\"***** WARNING: Training with all layers instead! *****\")\n",
+    "            pass # just to let it happen, just train it with all layers\n",
+    "        else:\n",
+    "            # overwrite\n",
+    "            logger.info(f\"***** WARNING: You are trying to train with first {args.n_layer_to_finetune} layers only *****\")\n",
+    "            logger.info(f\"***** WARNING: But the model has only {config.num_hidden_layers} layers *****\")\n",
+    "            config.num_hidden_layers = args.n_layer_to_finetune\n",
+    "    \n",
     "    tokenizer = AutoTokenizer.from_pretrained(\n",
     "        args.model_type,\n",
     "        use_fast=False,\n",
