token classification mismatch

--- a/code/run_token_classification.ipynb
+++ b/code/run_token_classification.ipynb
@@ -224,7 +224,7 @@
     "                        type=int,\n",
     "                        help=\"Random seed\")\n",
     "    parser.add_argument(\"--metric_for_best_model\",\n",
-    "                        default=\"Macro-F1\",\n",
+    "                        default=\"f1\",\n",
     "                        type=str,\n",
     "                        help=\"The metric to use to compare two different models.\")\n",
     "    parser.add_argument(\"--greater_is_better\",\n",
@@ -332,21 +332,34 @@
     "    # we use panda loader now, to make sure it is backward compatible\n",
     "    # with our file writer.\n",
     "    pd_format = True\n",
-    "    if args.inoculation_data_path.split(\".\")[-1] != \"tsv\":\n",
+    "    if \"data-files\" not in args.inoculation_data_path:\n",
     "        # here, we download from the huggingface server probably!\n",
     "        dataset = load_dataset(args.inoculation_data_path)\n",
     "        inoculation_train_df = dataset[\"train\"]\n",
     "        eval_df = dataset[\"validation\"]\n",
-    "    else:\n",
-    "        train_df = pd.read_csv(args.inoculation_data_path, delimiter=\"\\t\")\n",
-    "        eval_df = pd.read_csv(args.eval_data_path, delimiter=\"\\t\")\n",
-    "        inoculation_step_sample_size = int(len(train_df) * args.inoculation_step_sample_size)\n",
-    "        logger.info(f\"***** Inoculation Sample Count: %s *****\"%(inoculation_step_sample_size))\n",
-    "        # this may not always start for zero inoculation\n",
-    "        training_args = generate_training_args(args, inoculation_step=inoculation_step_sample_size)\n",
-    "        inoculation_train_df = train_df.sample(n=inoculation_step_sample_size, \n",
-    "                                               replace=False, \n",
-    "                                               random_state=args.seed) # seed here could not a little annoying.\n",
+    "    else:  \n",
+    "        pd_format = True\n",
+    "        if args.inoculation_data_path.split(\".\")[-1] != \"tsv\":\n",
+    "            if len(args.inoculation_data_path.split(\".\")) > 1:\n",
+    "                logger.info(f\"***** Loading pre-loaded datasets from the disk directly! *****\")\n",
+    "                pd_format = False\n",
+    "                datasets = DatasetDict.load_from_disk(args.inoculation_data_path)\n",
+    "                inoculation_step_sample_size = int(len(datasets[\"train\"]) * args.inoculation_step_sample_size)\n",
+    "                logger.info(f\"***** Inoculation Sample Count: %s *****\"%(inoculation_step_sample_size))\n",
+    "                # this may not always start for zero inoculation\n",
+    "                training_args = generate_training_args(args, inoculation_step=inoculation_step_sample_size)\n",
+    "                datasets[\"train\"] = datasets[\"train\"].shuffle(seed=args.seed)\n",
+    "                inoculation_train_df = datasets[\"train\"].select(range(inoculation_step_sample_size))\n",
+    "                eval_df = datasets[\"validation\"]\n",
+    "                datasets[\"validation\"] = datasets[\"validation\"].shuffle(seed=args.seed)\n",
+    "                if args.eval_sample_limit != -1:\n",
+    "                    datasets[\"validation\"] = datasets[\"validation\"].select(range(args.eval_sample_limit))\n",
+    "            else:\n",
+    "                logger.info(f\"***** Loading downloaded huggingface datasets: {args.inoculation_data_path}! *****\")\n",
+    "                pd_format = False\n",
+    "                if args.inoculation_data_path in [\"sst3\", \"cola\", \"mnli\", \"snli\", \"mrps\", \"qnli\", \"conll2003\"]:\n",
+    "                    pass\n",
+    "                raise NotImplementedError()\n",
     "    \n",
     "    text_column_name = TASK_CONFIG[args.task_name][0]\n",
     "    label_column_name = args.token_type\n",
@@ -503,23 +516,12 @@
     "        ]\n",
     "\n",
     "        results = metric.compute(predictions=true_predictions, references=true_labels)\n",
-    "        if data_args.return_entity_level_metrics:\n",
-    "            # Unpack nested dictionaries\n",
-    "            final_results = {}\n",
-    "            for key, value in results.items():\n",
-    "                if isinstance(value, dict):\n",
-    "                    for n, v in value.items():\n",
-    "                        final_results[f\"{key}_{n}\"] = v\n",
-    "                else:\n",
-    "                    final_results[key] = value\n",
-    "            return final_results\n",
-    "        else:\n",
-    "            return {\n",
-    "                \"precision\": results[\"overall_precision\"],\n",
-    "                \"recall\": results[\"overall_recall\"],\n",
-    "                \"f1\": results[\"overall_f1\"],\n",
-    "                \"accuracy\": results[\"overall_accuracy\"],\n",
-    "            }\n",
+    "        return {\n",
+    "            \"precision\": results[\"overall_precision\"],\n",
+    "            \"recall\": results[\"overall_recall\"],\n",
+    "            \"f1\": results[\"overall_f1\"],\n",
+    "            \"accuracy\": results[\"overall_accuracy\"],\n",
+    "        }\n",
     "        \n",
     "    train_dataset = datasets[\"train\"]\n",
     "    eval_dataset = datasets[\"validation\"]\n",
