--- a/code/run_token_classification.ipynb
+++ b/code/run_token_classification.ipynb
@@ -334,7 +334,7 @@
     "    pd_format = True\n",
     "    if \"data-files\" not in args.inoculation_data_path:\n",
     "        # here, we download from the huggingface server probably!\n",
-    "        dataset = load_dataset(args.inoculation_data_path)\n",
+    "        dataset = load_dataset(args.inoculation_data_path, cache_dir=args.cache_dir) # make sure cache dir is self-contained!\n",
     "        inoculation_train_df = dataset[\"train\"]\n",
     "        eval_df = dataset[\"validation\"]\n",
     "    else:  \n",
@@ -554,9 +554,9 @@
     "\n",
     "        metrics[\"train_samples\"] = len(train_dataset)\n",
     "\n",
-    "        trainer.log_metrics(\"train\", metrics)\n",
-    "        trainer.save_metrics(\"train\", metrics)\n",
-    "        trainer.save_state()\n",
+    "        # trainer.log_metrics(\"train\", metrics)\n",
+    "        # trainer.save_metrics(\"train\", metrics)\n",
+    "        # trainer.save_state()\n",
     "        \n",
     "    # Evaluation\n",
     "    if training_args.do_eval:\n",
@@ -567,8 +567,8 @@
     "        max_val_samples = len(eval_dataset)\n",
     "        metrics[\"eval_samples\"] = min(max_val_samples, len(eval_dataset))\n",
     "\n",
-    "        trainer.log_metrics(\"eval\", metrics)\n",
-    "        trainer.save_metrics(\"eval\", metrics)"
+    "        # trainer.log_metrics(\"eval\", metrics)\n",
+    "        # trainer.save_metrics(\"eval\", metrics)"
    ]
   }
  ],
