add en_ewt support

--- a/code/run_token_classification.ipynb
+++ b/code/run_token_classification.ipynb
@@ -326,7 +326,8 @@
     "    if not os.path.exists(os.environ[\"TRANSFORMERS_CACHE\"]): \n",
     "        os.makedirs(os.environ[\"TRANSFORMERS_CACHE\"])\n",
     "    TASK_CONFIG = {\n",
-    "        \"conll2003\" : (\"words\", None)\n",
+    "        \"conll2003\" : (\"words\", None),\n",
+    "        \"en_ewt\" : (\"tokens\", None)\n",
     "    }\n",
     "    # we need some prehandling here for token classifications!\n",
     "    # we use panda loader now, to make sure it is backward compatible\n",
@@ -357,7 +358,7 @@
     "            else:\n",
     "                logger.info(f\"***** Loading downloaded huggingface datasets: {args.inoculation_data_path}! *****\")\n",
     "                pd_format = False\n",
-    "                if args.inoculation_data_path in [\"sst3\", \"cola\", \"mnli\", \"snli\", \"mrps\", \"qnli\", \"conll2003\"]:\n",
+    "                if args.inoculation_data_path in [\"sst3\", \"cola\", \"mnli\", \"snli\", \"mrps\", \"qnli\", \"conll2003\", \"en_ewt\"]:\n",
     "                    pass\n",
     "                raise NotImplementedError()\n",
     "    \n",
